# nms_optimizer-service

./: .coverage  .gemini.md  .gemini.md.bak  .gitignore  .pre-commit-config.yaml  .prettierrc  Aptfile  BUG_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CORE_TEST_IMPROVEMENTS.md  Dockerfile  GEMINI.md  LEARNINGS.gemini.md  LEARNINGS.gemini.md.bak  NEXT_STEPS.md  NO_SOLVE_WINDOW_SCORING.md  OPTIMIZATION_TEST_REPORT.md  PRODUCTION_CHECKLIST.md  PYRIGHT_IMPROVEMENTS.md  Procfile  README.md  README.md.bak  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_SUMMARY.md  TEST_RESULTS_SC_ELIGIBLE.md  WINDOWING_TEST_REPORT.md  analyze_benchmarks.py  app.py  apply_labels.py  bonus_calculations.py  bonus_calculations_working.py  combined_training.py  format_moduleDefs.py  formatted_solves.json  generate_samples.py  generate_solves.sh  grid_display.py  grid_log_1762104799.7171392.json  grid_log_1762104799.7179596.json  grid_log_1762104938.0646892.json  (+34 more)
.elsikora/: commitlint-ai.config.js
debugging_utils/: generate_samples.py  generate_solves.py  local.py  refine_grid_debug.py  solve_map_generator.py  test_simulated_annealing.py  trails_stub.json
docs/: architecture-design-document.md  backlog.md  product-requirements-document.md  software-requirements-specification.md  technical-design-document.md
rust_scorer/: Cargo.toml
rust_scorer/src/: lib.rs
scripts/: clean_json.py  fix_json.py  inject_window_rules.py  refactor_injection.py  retrain_models.py  verify_cors.py
src/: analytics.py  analytics_data.py  app.py  app.py.bak  bonus_calculations copy.py  bonus_calculations.py  bonus_calculations_numba.py  clean_venv.py  data_loader.py  grid_display.py  grid_utils.py  iterative_placement.py  local.py  logger.py  ml_placement.py  model_cache.py  model_definition.py  module_placement.py  modules.py  modules_utils.py  numba_utils.py  optimization_algorithms.py  optimization_context.py  optimizer.py  pattern_matching.py  rust_scorer.pyi  simulated_annealing.py  solve_map_utils.py
tests/: test_bonus_calculations.py  test_optimization_algorithms.py
trained_models/: model_atlantid_mining_4x2.pth  model_corvette_cyclotron_max.pth  model_corvette_hyper_4x4.pth  model_corvette_hyper_max.pth  model_corvette_launch_4x3.pth  model_corvette_launch_max.pth  model_corvette_photonix_max.pth  model_corvette_positron_max.pth  model_corvette_pulse_max.pth  model_corvette_shield_max.pth  model_living_scream_2x2.pth  model_sentinel_photonix_4x3.pth  model_solar_photonix_3x3.pth  model_solar_photonix_4x3.pth  (+13 more)
wasm/: Makefile  (+4 more)
(+9186 files in other folders)
