[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"scripts/debugging_utils/solve_map_generator.py" = ["E402"]
"scripts/training/train_model.py" = ["E402"]
"src/app.py" = ["E402"]

[project]
name = "nms-optimizer-service"
version = "3.11.0"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}