[tool.black]
line-length = 120

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust_scorer/Cargo.toml"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"scripts/debugging_utils/solve_map_generator.py" = ["E402"]
"scripts/training/train_model.py" = ["E402"]
"scripts/training/benchmark.py" = ["E402"]
"src/app.py" = ["E402"]

[project]
name = "nms-optimizer-service"
version = "5.9.3"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.deptry]
exclude = ["scripts", "wasm"]

[tool.deptry.per_rule_ignores]
DEP001 = ["src"]
DEP003 = ["flask", "flask_compress", "flask_cors", "flask_socketio", "gevent", "torch", "numpy", "google"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "5.9.3"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
