cargo-features = ["edition2024"]

[package]
name = "rust_scorer"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
rand = "0.8"
serde_json = "1.0"
pyo3-log = "0.13.2"
log = "0.4"

[build-dependencies]
pyo3-build-config = "0.27.1"

[lib]
name = "rust_scorer"
crate-type = ["cdylib"]
